# PictComp

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  GIT_SETUP.md  LICENSE  README.md  README_RELEASE.md  app_streamlit.py  config_manager.py  exif_viewer.py  gui_main.py  image_compressor.py  image_viewer.py  license_manager.py  mkdocs.yml  presets.py  pyproject.toml  requirements-docs.txt  requirements-gui.txt  requirements.txt  version.py
.github/workflows/: build-macos.yml
assets/icon/: README.md  create_icns.sh  create_icons.py  pictcomp_bright.icns  pictcomp_dark.icns
base_py/: PictComp.py
build_config/: BUILD_INSTRUCTIONS.md  build_macos.sh  build_windows.bat  create_dmg.sh  installer.iss  pictcomp_gui.spec  pictcomp_gui_mac.spec
docs/: BUILD_MKDOCS.md  DEVELOPMENT.md  FEEDBACK_FORM_SETUP.md  GIT_SETUP.md  LICENSE_SPECIFICATION.md  PICTCOMP_PAGE_IMPLEMENTATION.md  index.md
docs/help/: BUILD_CHM.md  README.md  batch.html  batch.md  compression.html  compression.md  exif.html  exif.md  file_selection.html  file_selection.md  getting_started.html  getting_started.md  help.css  index.html  license.html  license.md  presets.html  presets.md  troubleshooting.html  troubleshooting.md  viewer.html  viewer.md
legacy/: README.md  pictcomp_legacy.py
tests/: __init__.py  test_image_compressor.py
