[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pictcomp"
version = "2.0.0"
description = "画像一括圧縮アプリ - JPEG, PNG, HEIC, WebP対応"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PictComp Contributors"}
]
# プロジェクトURL
[project.urls]
Homepage = "https://6EFB0D.github.io/office-goplan/"
Repository = "https://github.com/6EFB0D/PictComp_Dev"
keywords = ["image", "compression", "resize", "jpeg", "png", "heic", "webp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GUI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

